# filter-multiscaler-xma-plg-u30

./: CMakeLists.txt  Makefile  README.md
include/: xlnx_abr_scaler_coeffs.h  xlnx_fixed_scaler_coeffs.h  xv_multi_scaler_hw.h
src/: xlnx_multi_scaler.cpp
